なんと設定自体は、UTCでやる様子だった

--- a/calendars_properties_builder/calendars_starts_from_2019-01-01_UTC_sample.properties
+++ b/calendars_properties_builder/calendars_starts_from_2019-01-01_UTC_sample.properties
@@ -11,4 +11,4 @@ calendar.japanese.eras: \
 	name=Taisho,abbr=T,since=-1812153600000; \
 	name=Showa,abbr=S,since=-1357603200000;  \
 	name=Heisei,abbr=H,since=600220800000;   \
-	name=\u5143\u65e6\u306b\u5207\u308a\u66ff\u308f\u3063\u305f\u5143\u53f7,abbr=N,since=1546268400000
+	name=\u5143\u65e6UTC\u5207\u66ff\u8a2d\u5b9a\u306e\u5143\u53f7,abbr=N,since=1546300800000
