--- a/NextJapaneseEra/build.gradle
+++ b/NextJapaneseEra/build.gradle
@@ -17,6 +17,8 @@ repositories {
     jcenter()
 }
 
+def encoding = { it.encoding = "UTF-8" }
+
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
@@ -28,3 +30,5 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
+
+tasks.withType (AbstractCompile) each {encoding it.options}
