退位１９年４月３０日　政府８日に閣議決定 のニュースみて更新

--- a/NextJapaneseEra/build.gradle
+++ b/NextJapaneseEra/build.gradle
@@ -28,3 +28,11 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
+
+def defaultEncoding = 'UTF-8'
+compileJava {
+    options.encoding = defaultEncoding
+}
+compileTestJava {
+    options.encoding = defaultEncoding
+}
