--- a/calendars_properties_builder/calendars_starts_from_2019-05-01_UTC_sample.properties
+++ b/calendars_properties_builder/calendars_starts_from_2019-05-01_UTC_sample.properties
@@ -11,4 +11,4 @@ calendar.japanese.eras: \
 	name=Taisho,abbr=T,since=-1812153600000; \
 	name=Showa,abbr=S,since=-1357603200000;  \
 	name=Heisei,abbr=H,since=600220800000;   \
-	name=\u56db\u6708\u4e00\u65e5UTC\u5207\u66ff\u5143\u53f7,abbr=N,since=1554076800000
+	name=\u65b0\u5143\u53f7,abbr=N,since=1556668800000
